Complete Add Statistics View

--- a/FUNewsManagementFE/FUNewsManagementWebRazorPage/Pages/SystemAccounts/Index.cshtml
+++ b/FUNewsManagementFE/FUNewsManagementWebRazorPage/Pages/SystemAccounts/Index.cshtml
@@ -16,6 +16,8 @@
     <a asp-page="Index" class="btn btn-secondary">Reset</a>
 </form>
 
+<a asp-page="/SystemAccounts/NewsStatistics" class="btn btn-info mb-3">Go to News Statistics</a>
+
 <table class="table table-bordered" id="accountsTable">
     <thead>
         <tr>
